use java 8 instead of 11